force-app/main/default/objects/Furniture__c/Furniture__c.object-meta.xml
<CustomObject>
    <label>Furniture</label>
    <nameField>
        <label>Furniture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Furnitures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>