force-app/main/default/objects/Furniture__c/fields/Total_Item_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Remaining__c</fullName>
    <label>Total Item Remaining</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>