force-app/main/default/objects/Furniture__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items in WH</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>