force-app/main/default/objects/Furniture__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Why we are Creating this field?</description>
    <inlineHelpText>Why do you have to fill in detail?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Beds</fullName>
            </value>
            <value>
                <fullName>Chairs</fullName>
            </value>
            <value>
                <fullName>Dressers</fullName>
            </value>
            <value>
                <fullName>Nightstand</fullName>
            </value>
            <value>
                <fullName>Sofas</fullName>
            </value>
            <value>
                <fullName>Tables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>